JWT authorization done & verification middleware implemented
