# src/controller/AuthController.ts
@@ -1,4 +1,4 @@
-import { Body, Post, Route, Tags } from 'tsoa';
+import { Body, Get, Post, Query, Route, Tags } from 'tsoa';
 import { IAuthController } from './interfaces';
 import { LogSuccess, LogError, LogWarning } from '../utils/logger';
 import { IUser } from '../domain/interfaces/IUser.interface';
@@ -8,9 +8,9 @@ import { IAuth } from '../domain/interfaces/IAuth.interface';
 import {
   registerUser,
   loginUser,
-  logoutUser,
   getUserByID,
 } from '../domain/orm/User.orm';
+import { AuthResponse, ErrorResponse } from './types';
 
 @Route('/api/auth')
 @Tags('AuthController')
@@ -44,24 +44,42 @@ export class AuthController implements IAuthController {
 
   @Post('/login')
   public async loginUser(@Body() auth: IAuth): Promise<any> {
-    let response: any = '';
+    let response: AuthResponse | ErrorResponse | undefined;
 
     if (auth) {
-      LogSuccess(`[/api/auth/login] Login User: ${auth.email} `);
-      await loginUser(auth).then((r) => {
-        response = {
-          message: `Welcome, ${auth.email}`,
-          token: r.token, // JWT generated for logged in user
-        };
-      });
+      const data = await loginUser(auth);
+      data.error
+        ? LogError(`[/api/auth/login] Not valid Login User Data`)
+        : LogSuccess(`[/api/auth/login] Login User: ${auth.email} `);
+
+      response = data;
     } else {
       LogWarning(
         '[/api/auth/login] Login needs Auth Entity (email && password)'
       );
       response = {
         error: '[AUTH ERROR]: Email & Password are needed',
-        message: 'Please, provide a email && password to login',
+        message: 'Please, provide an email && password to login',
       };
+    }
+
+    return response;
+  }
+
+  /**
+   * Endpoint that retrieves a single User from the "Users" Collection in DB
+   * Middleware: Validate JWT
+   * In order to work: you should add the x-access-token with a valid JWT in headers
+   * @param {string} id Id of user to retrieve
+   * @returns User found by ID
+   */
+  @Get('/me')
+  public async userData(@Query() id: string): Promise<any> {
+    let response: any = '';
+
+    if (id) {
+      LogSuccess(`[/api/auth/me] Get User Data By ID: ${id} `);
+      response = await getUserByID(id);
     }
 
     return response;
