# src/routes/AuthRouter.ts
@@ -6,6 +6,9 @@ import { IAuth } from '../domain/interfaces/IAuth.interface';
 // BCRYPT for passwords
 import bcrypt from 'bcrypt';
 
+// JWT Verifier MiddleWare
+import { verifyToken } from '../middlewares/verifyToken.middleware';
+
 // Router from express
 const authRouter = express.Router();
 
@@ -32,6 +35,11 @@ authRouter.route('/register').post(async (req: Request, res: Response) => {
 
     // Send response to client
     return res.status(200).send(response);
+  } else {
+    // Send to the client the response
+    return res.status(400).send({
+      message: '[ERROR User Data missing]: No user was registered.',
+    });
   }
 });
 
@@ -53,8 +61,35 @@ authRouter.route('/login').post(async (req: Request, res: Response) => {
 
     // Sends response to client with JWT included to authorize requests
     return res.status(200).send(response);
+  } else {
+    // Send to the client the response
+    return res.status(400).send({
+      message: '[ERROR User Data missing or wrong]: ¨Please try again.',
+    });
   }
 });
+
+authRouter
+  .route('/me')
+  .get(verifyToken, async (req: Request, res: Response) => {
+    // Get the ID of user to check it's data
+    const id: any = req?.query?.id;
+
+    if (id) {
+      // Controller: Auth Controller
+      const controller: AuthController = new AuthController();
+
+      // Obtain response from Controller
+      const response: any = await controller.userData(id);
+
+      // If user is authorized:
+      return res.status(200).send(response);
+    } else {
+      return res.status(401).send({
+        message: 'You are not authorized to perform this action',
+      });
+    }
+  });
 
 // Export Auth Router
 export default authRouter;
